--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,6 @@ Authors@R: person("Soo", "Lee", email = "duplexa@gmail.com", role = c("aut", "cr
 Description: Wrappers, templates and layouts for various plots
 Depends:
     R (>= 2.15.0)
-License: GNU Public
+License: file LICENSE
 LazyData: true
 RoxygenNote: 5.0.1
