added import grDevices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,11 @@ export(stylefunc0)
 export(stylefunc_blue)
 export(template1)
 export(vioplot_list)
+import(dev.off)
+import(grDevices)
 import(graphics)
+import(pdf)
+import(pdf.options)
+import(png)
 import(vioplot)
+importFrom(grDevices,rainbow)
