minor fix on importFrom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,11 +15,10 @@ export(stylefunc0)
 export(stylefunc_blue)
 export(template1)
 export(vioplot_list)
-import(dev.off)
-import(grDevices)
 import(graphics)
-import(pdf)
-import(pdf.options)
-import(png)
 import(vioplot)
+importFrom(grDevices,"pdf,")
+importFrom(grDevices,"pdf.options,")
+importFrom(grDevices,"png,")
+importFrom(grDevices,dev.off)
 importFrom(grDevices,rainbow)
