fixed importedFrom syntax

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,8 @@ export(template1)
 export(vioplot_list)
 import(graphics)
 import(vioplot)
-importFrom(grDevices,"pdf,")
-importFrom(grDevices,"pdf.options,")
-importFrom(grDevices,"png,")
 importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,pdf.options)
+importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
