added sm, required for vioplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(stylefunc_blue)
 export(template1)
 export(vioplot_list)
 import(graphics)
+import(sm)
 import(vioplot)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
