--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,10 +16,10 @@ export(stylefunc_blue)
 export(template1)
 export(vioplot_list)
 import(graphics)
-import(sm)
 import(vioplot)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,pdf.options)
 importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
+importFrom(sm,sm.density)
